--- a/index.html
+++ b/index.html
@@ -382,8 +382,17 @@ In our experiments, we demonstrate that our music-reactive generation model perf
     <div class="container is-max-desktop">
       <h2 class="title is-3">Music-Reactive Video Generation Comparison</h2>
       <div class="content has-text-justified">
-        <p>We generate music-reactive videos on three different music genres (<em>i.e.</em>, Rock, K-POP, Traditional Instrumental Ensemble) and compare different generation methods.
-          In every genre, ours work favorably compared to decent baseline methods. You can control video sound using below bar.
+        <p>We generate music-reactive videos in three different genres (<em>i.e.<em>, Rock, K-POP, Traditional Instrumental Ensemble) 
+          and compare our unique H-CENS method to the baseline method, Chroma CENS. After analyzing each genre, 
+          we found that videos generated with H-CENS responded more clearly and naturally to the music's climaxes. 
+          This is not only because it captures large transitions, but also because H-CENS is able to reflect subtle musical changes, 
+          allowing for precise visual expressions. As a result, our method more accurately captures the dynamic nature of music across 
+          various genres, providing a more immersive experience where the audio and visual elements are closely intertwined.
+        </p>
+        <p>  
+          The videos below showcase a comparison between those generated using Chroma CENS and H-CENS for each music genre, 
+          along with sample videos created using H-CENS. 
+          Since the audio can be loud during playback, please use the bar below to adjust the volume for an optimal viewing experience.
         </p>
       <div class="mybar">
         <div>
