Editing,add H-CENS videos

--- a/index.html
+++ b/index.html
@@ -194,10 +194,14 @@
   }
   .slider-item h4.title.is-5, h2.title.is-3 {
     text-align: center;
+    font-style: normal;
+
   }
 
   .swiper-slide h4.title.is-5, h3.title.is-4 {
     text-align: center;
+    font-style: normal;
+
   }
 /* 슬라이더 스타일 */
 .swiper-container {
