--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               for accurately evaluating generated music-reactive videos. For
               our music-reactive generation model, we present the highlighted
               chromagram approach to effectively represent musical struc-
-              ture information (<em>e.g.<em>, melody, beat, rhythm) in videos. We
+              ture information (<em>e.g.</em>, melody, beat, rhythm) in videos. We
               also introduce a quantitative measurement metric, Beat Co-
               occurrence, which is strongly correlated with human survey
               results. Our experiments demonstrate that our music-reactive
