--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Music-Reactive Video Generation Comparison</h2>
       <div class="content has-text-justified">
-        <p>We generate music-reactive videos in three different genres (<em>i.e.<em>, Rock, K-POP, Traditional Instrumental Ensemble) 
+        <p>We generate music-reactive videos in three different genres (<em>i.e.</em>, Rock, K-POP, Traditional Instrumental Ensemble) 
           and compare our unique H-CENS method to the baseline method, Chroma CENS. After analyzing each genre, 
           we found that videos generated with H-CENS responded more clearly and naturally to the music's climaxes. 
           This is not only because it captures large transitions, but also because H-CENS is able to reflect subtle musical changes, 
