--- a/index.html
+++ b/index.html
@@ -399,14 +399,14 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Music-Reactive Video Generation Comparison</h2>
       <div class="content has-text-justified">
-        <p>We generate music-reactive videos in three different genres (<em>i.e.</em>, Rock, K-POP, Traditional Instrumental Ensemble) 
+        <p style="font-style: normal;">We generate music-reactive videos in three different genres (<em>i.e.</em>, Rock, K-POP, Traditional Instrumental Ensemble) 
           and compare our unique H-CENS method to the baseline method, Chroma CENS. After analyzing each genre, 
           we found that videos generated with H-CENS responded more clearly and naturally to the music's climaxes. 
           This is not only because it captures large transitions, but also because H-CENS is able to reflect subtle musical changes, 
           allowing for precise visual expressions. As a result, our method more accurately captures the dynamic nature of music across 
           various genres, providing a more immersive experience where the audio and visual elements are closely intertwined.
         </p>
-        <p>  
+        <p style="font-style: normal;">  
           The videos below showcase a comparison between those generated using Chroma CENS and H-CENS for each music genre, 
           along with sample videos created using H-CENS. 
           Since the audio can be loud during playback, please use the bar below to adjust the volume for an optimal viewing experience.
