--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@ section.hero.is-small.close-gap {
           Conversely, videos generated using H-CENS better preserve and 
           emphasize these climaxes, leading to more accurate and natural visual responses. As a result, we found that H-CENS more effectively captures subtle musical changes and emotional nuances, facilitating a dynamic interaction between the music and visual elements, and conveying the emotional characteristics of the music more clearly to the viewers.
         </p>
-        <p style="font-style: normal;">  
-          The videos below illustrate the differences between Chroma-CENS and H-CENS across various genres, with H-CENS demonstrating more precise responsiveness to the structure and emotional qualities of the music. Since the audio may be loud during playback, please use the bar below to adjust the volume for optimal viewing.
+      <div style="text-align: center;">
+        <p>
+          *Please adjust the volume to suit your computer's sound settings.*
         </p>
-
-        
+      </div>
       <div class="mybar">
         <div>
           <img src="static/images/sound-icon.png" alt="Volume" style="display:block; width: 1.5em;">
